--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "tailwindcss": "^3.0.0",
     "autoprefixer": "^10.4.21",
-    "vue": "^3.5.13"
+    "tailwindcss": "^3.0.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
