--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
     "tailwindcss": "^3.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
