--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-plus": "^2.9.9",
     "tailwindcss": "^3.0.0",
     "vue": "^3.5.13",
+    "vue-auth3": "^1.1.0",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
